--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.3.2",
-  "Status": "Completed",
+  "Status": "Started",
   "StartDate": "2021-06-06T18:48:23.1068338+03:00",
-  "FinishDate": "2021-09-04T18:24:57.6264828+03:00"
+  "FinishDate": null
 }
