--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.3.2",
-  "Status": "Completed",
-  "StartDate": "2021-06-06T18:48:23.1068338+03:00",
-  "FinishDate": "2021-09-05T18:05:19.8491307+03:00"
+  "Version": "0.3.3",
+  "Status": "Started",
+  "StartDate": "2021-09-10T19:53:41.1531682+03:00",
+  "FinishDate": null
 }
