--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.3.3",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2021-09-10T19:53:41.1531682+03:00",
-  "FinishDate": null
+  "FinishDate": "2021-10-02T12:33:20.1056771+03:00"
 }
