Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.3.3",
-  "Status": "Completed",
-  "StartDate": "2021-09-10T19:53:41.1531682+03:00",
-  "FinishDate": "2021-10-02T12:33:20.1056771+03:00"
+  "Version": "0.3.4",
+  "Status": "Started",
+  "StartDate": "2021-10-03T09:32:01.3845949+03:00",
+  "FinishDate": null
 }
