Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.3.4",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2021-10-03T09:32:01.3845949+03:00",
-  "FinishDate": null
+  "FinishDate": "2021-12-04T13:23:42.6707252+02:00"
 }
