--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.3.5",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2022-01-20T18:45:31.7751332+02:00",
-  "FinishDate": null
+  "FinishDate": "2022-02-13T14:39:27.6588277+02:00"
 }
