Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.3.5",
-  "Status": "Completed",
-  "StartDate": "2022-01-20T18:45:31.7751332+02:00",
-  "FinishDate": "2022-02-13T14:39:27.6588277+02:00"
+  "Version": "0.3.6",
+  "Status": "Started",
+  "StartDate": "2022-02-16T08:52:02.9225133+02:00",
+  "FinishDate": null
 }
