Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.3.6",
-  "Status": "Completed",
-  "StartDate": "2022-02-16T08:52:02.9225133+02:00",
-  "FinishDate": "2022-03-18T09:04:52.9305876+02:00"
+  "Version": "0.3.7",
+  "Status": "Started",
+  "StartDate": "2022-03-18T09:08:32.4203277+02:00",
+  "FinishDate": null
 }
