--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.3.7",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2022-03-18T09:08:32.4203277+02:00",
-  "FinishDate": null
+  "FinishDate": "2022-06-20T20:33:46.2841485+03:00"
 }
