Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.3.7",
-  "Status": "Completed",
-  "StartDate": "2022-03-18T09:08:32.4203277+02:00",
-  "FinishDate": "2022-06-20T20:33:46.2841485+03:00"
+  "Version": "0.4.0",
+  "Status": "Started",
+  "StartDate": "2022-06-20T20:39:13.0253596+03:00",
+  "FinishDate": null
 }
