--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.4.0",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2022-06-20T20:39:13.0253596+03:00",
-  "FinishDate": null
+  "FinishDate": "2022-07-20T21:51:09.2560722+03:00"
 }
