--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.4.1",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2022-07-20T21:56:22.7854922+03:00",
-  "FinishDate": null
+  "FinishDate": "2022-08-20T19:50:58.3439748+03:00"
 }
