Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.4.1",
-  "Status": "Completed",
-  "StartDate": "2022-07-20T21:56:22.7854922+03:00",
-  "FinishDate": "2022-08-20T19:50:58.3439748+03:00"
+  "Version": "0.4.2",
+  "Status": "Started",
+  "StartDate": "2022-08-20T19:52:35.8396694+03:00",
+  "FinishDate": null
 }
