Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.4.2",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2022-08-20T19:52:35.8396694+03:00",
-  "FinishDate": null
+  "FinishDate": "2022-10-08T12:54:16.5256393+03:00"
 }
