--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.4.2",
-  "Status": "Completed",
-  "StartDate": "2022-08-20T19:52:35.8396694+03:00",
-  "FinishDate": "2022-10-08T12:54:16.5256393+03:00"
+  "Version": "0.4.3",
+  "Status": "Started",
+  "StartDate": "2022-10-08T12:57:12.8407568+03:00",
+  "FinishDate": null
 }
