--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.4.3",
-  "Status": "Completed",
-  "StartDate": "2022-10-08T12:57:12.8407568+03:00",
-  "FinishDate": "2023-02-26T12:21:43.6175198+02:00"
+  "Version": "0.5.0",
+  "Status": "Started",
+  "StartDate": "2023-02-26T12:24:19.1138915+02:00",
+  "FinishDate": null
 }
