Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.5.0",
-  "Status": "Completed",
-  "StartDate": "2023-02-26T12:24:19.1138915+02:00",
-  "FinishDate": "2023-04-07T16:49:08.2057741+03:00"
+  "Version": "0.5.1",
+  "Status": "Started",
+  "StartDate": "2023-04-09T15:36:28.5288073+03:00",
+  "FinishDate": null
 }
