Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.5.1",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2023-04-09T15:36:28.5288073+03:00",
-  "FinishDate": null
+  "FinishDate": "2023-04-27T11:45:40.3660981+03:00"
 }
