Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.5.2",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2023-04-27T11:54:05.42097+03:00",
-  "FinishDate": null
+  "FinishDate": "2023-07-15T10:20:01.8527829+03:00"
 }
