Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.5.3",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2023-07-15T10:50:34.1469743+03:00",
-  "FinishDate": null
+  "FinishDate": "2024-04-20T20:26:27.2064283+03:00"
 }
