Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.5.4",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2024-04-20T20:29:40.1079464+03:00",
-  "FinishDate": null
+  "FinishDate": "2024-06-24T16:21:39.4407351+03:00"
 }
