Set release as completed

--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
-  "Version": "0.5.4",
-  "Status": "Completed",
-  "StartDate": "2024-04-20T20:29:40.1079464+03:00",
-  "FinishDate": "2024-06-24T16:21:39.4407351+03:00"
+  "Version": "0.5.5",
+  "Status": "Started",
+  "StartDate": "2024-06-24T16:28:05.8587712+03:00",
+  "FinishDate": null
 }
