--- a/FutureReleaseInfo.json
+++ b/FutureReleaseInfo.json
@@ -1,6 +1,6 @@
 {
   "Version": "0.5.5",
-  "Status": "Started",
+  "Status": "Completed",
   "StartDate": "2024-06-24T16:28:05.8587712+03:00",
-  "FinishDate": null
+  "FinishDate": "2025-11-02T11:37:01.4619291+02:00"
 }
